docs: レスポンスのswagドキュメント更新
