# docs/swagger.json
@@ -65,7 +65,7 @@
                 "summary": "タスク追加",
                 "parameters": [
                     {
-                        "description": "Payload Description",
+                        "description": "登録タスク内容（id / user_idの値は自動セット）",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -75,8 +75,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/model.Task"
                         }
@@ -143,7 +143,7 @@
                         "required": true
                     },
                     {
-                        "description": "Payload Description",
+                        "description": "登録タスク内容（id / user_idの値は自動セット）",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -168,9 +168,6 @@
                     }
                 ],
                 "description": "ユーザのタスクを削除する",
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "task"
                 ],
@@ -185,11 +182,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
